fix vertical align

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -28,9 +28,14 @@
   }
 }
 
-.p-t-10{
+.p-t-10 {
   padding-top: 10px;
 }
-.p-b-10{
+
+.p-b-10 {
   padding-bottom: 10px;
+}
+
+.table > tbody > tr > td {
+  vertical-align: inherit;
 }
